--- a/stm32_bluepill_i2c_eeprom.ioc
+++ b/stm32_bluepill_i2c_eeprom.ioc
@@ -1,6 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C2.IPParameters=OwnAddress
+I2C2.IPParametersWithoutCheck=OwnAddress
+I2C2.OwnAddress=0
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=I2C2
